# pybkgmodel

./: .gitignore  .mailmap  LICENSE  README.md  bkg.py  config_example.yaml  pyproject.toml  setup.cfg
.github/workflows/: ci.yml
aux/: camera.py  data.py  message.py  model.py  processing.py
bkgmodel/tests/: test_version.py
docs/: Makefile
docs/source/: authors.rst  conf.py  contribute.rst  index.rst  install.rst  reference.rst  userguide.rst
examples/: config_example.yaml
pybkgmodel/: __init__.py  exclusion_region_method.py  utils.py
pybkgmodel/scripts/: example_exclusion_region_method.py  plotting.py
pybkgmodel/tests/: test_exclusion_region_method.py  test_utils.py  test_version.py
src/pybkgmodel/: camera.py  data.py  matching.py  message.py  model.py  processing.py
src/pybkgmodel/scripts/: bkgmodel.py
src/pybkgmodel/tests/: test_basic.py
