[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pybkgmodel"
version = "1.0.0"
authors = [
  { name="Marcel Strzys", email="strzys@icrr.u-tokyo.ac.jp" },
  { name="Ievgen Vovk", email="vovk@icrr.u-tokyo.ac.jp" },
  { name="Moritz Huetten", email="huetten@icrr.u-tokyo.ac.jp" },
]
description = "Background model construction tool for Imaging Atmospheric Cherenkov telescopes"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU GPLv3",
    "Operating System :: OS Independent",
]
dependencies = [
    "astropy >=5.3,<7.0.0a0",
    "matplotlib",
    "numpy>=1.21.5,<2.0",
    "pandas",
    "progressbar2",
    "regions",
    "scipy",
    "uproot",
    "PyYAML"
]

[project.optional-dependencies]
"tests" = [
    "pytest",
    "pytest-cov",
]

[project.urls]
"Homepage" = "https://github.com/cta-observatory/pybkgmodel/-"
"Bug Tracker" = "https://github.com/cta-observatory/pybkgmodel/-/issues"

[project.scripts]
bkgmodel = "pybkgmodel.scripts.bkgmodel:main"
