[metadata]
name = bkgmodel
version = attr: bkgmodel.__version__
author = <fill in>
author_email = <fill_in>
url = https://github.com/cta-observatory/pybkgmodel
description = Background modelling for IACTs
license = BSD3
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
  License :: OSI Approved :: BSD License

[options]
packages = find:
python_requires = >=3.6
install_requires =
  pyirf ~= 0.5.0
  astropy >= 4.2
  gammapy ~= 0.18.2

[options.extras_require]
tests =
  pytest
  pytest-cov
